# funlib.persistence

./: .gitignore  .pre-commit-config.yaml  README.md  explore.ipynb  mypy.ini  pyproject.toml
.github/workflows/: black.yaml  mypy.yaml  publish.yaml  ruff.yaml  tests.yaml  ty.yaml
funlib/persistence/: __init__.py  mongodb_graph_provider.py  types.py
funlib/persistence/arrays/: __init__.py  adapters.py  array.py  datasets.py  freezable.py  klb_adaptor.py  lazy_ops.py  metadata.py  ome_datasets.py  ome_tmp.py  slices.py  utils.py
funlib/persistence/graphs/: __init__.py  file_graph_provider.py  graph.py  graph_database.py  mongodb_graph_provider.py  pgsql_graph_database.py  shared_graph_provider.py  sql_graph_database.py  sqlite_graph_database.py  sqlite_graph_provider.py  types.py
funlib/persistence/rustworkx/: __init__.py  file_graph_provider.py  shared_graph_provider.py
src/funlib/persistence/: __init__.py
src/funlib/persistence/arrays/: __init__.py  array.py  datasets.py  lazy_ops.py  metadata.py  ome_datasets.py  utils.py
src/funlib/persistence/graphs/: graph_database.py  pgsql_graph_database.py  sql_graph_database.py  sqlite_graph_database.py
tests/: conftest.py  test_array.py  test_config.py  test_datasets.py  test_graph.py  test_graph_attribute_functions.py  test_graph_meta_collection.py  test_klb_adaptor.py  test_metadata.py  test_rustworkx.py  test_slices.py
tests/fixtures/metadatas/: default.json  incomplete1.json  incomplete2.json  incomplete3.json  ome-ngff-multiscale.json  simple.json
