[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "funlib.persistence"
description = "Interfaces for data (arrays and graphs) and storage formats (databases and file formats)"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "William Patton", email = "pattonw@hhmi.org" },
    { name = "Jan Funke", email = "funkej@hhmi.org" },
]
dynamic = ['version']

requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
keywords = []

dependencies = [
    "zarr>=2,<3",
    "iohub >= 0.2.0b0",
    "funlib.geometry>=0.3.0",
    "networkx>=3.0.0",
    "pymongo>=4.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "dask>=2024.0.0",
    "toml>=0.10.0",
    "psycopg2-binary>=2.9.5",
]

[tool.setuptools.dynamic]
version = { attr = "funlib.persistence.__version__" }

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "coverage>=7.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "types-psycopg2>=2.9.21.2024",
    "types-toml>=0.10",
    "types-networkx>=3.2.1",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
# pyflakes, pycodestyle, isort
lint.select = ["F", "W", "I001"]

[tool.setuptools.package-data]
"funlib.persistence" = ["py.typed"]

[tool.mypy]
explicit_package_bases = true

# # module specific overrides
[[tool.mypy.overrides]]
module = [
    "zarr.*",
    "iohub.*",
]
ignore_missing_imports = true
