[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "funlib.persistence"
description = "Interfaces for data (arrays and graphs) and storage formats (databases and file formats)"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "William Patton", email = "pattonw@hhmi.org" },
    { name = "Jan Funke", email = "funkej@hhmi.org" },
]
dynamic = ['version']

requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
keywords = []

dependencies = [
    "zarr>=2,<3",
    # ImportError: cannot import name 'cbuffer_sizes' from 'numcodecs.blosc'
    # We can pin zarr to >2.18.7 but then we have to drop python 3.10
    # pin numcodecs to avoid breaking change
    "numcodecs>0.13,<0.16.0",
    "iohub>=0.2.0b0",
    "funlib.geometry>=0.3.0",
    "networkx>=3.0.0",
    "pymongo>=4.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "dask>=2024.0.0",
    "toml>=0.10.0",
    "psycopg2-binary>=2.9.5",
]

[tool.setuptools.dynamic]
version = { attr = "funlib.persistence.__version__" }

[project.optional-dependencies]
dev = [
    "coverage>=7.7.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
    "types-networkx",
    "types-psycopg2",
    "types-toml",
]

[tool.ruff]
# pyflakes, pycodestyle, isort
lint.select = ["F", "W", "I001"]

[tool.setuptools.package-data]
"funlib.persistence" = ["py.typed"]

[tool.mypy]
explicit_package_bases = true

# # module specific overrides
[[tool.mypy.overrides]]
module = ["zarr.*", "iohub.*"]
ignore_missing_imports = true
